--- a/web/detail2.html
+++ b/web/detail2.html
@@ -150,12 +150,48 @@
                         xung quanh chàng đều cố gắng dò xét xem chàng có
                         thật
                         điên khùng hay chỉ giả điên.</p>
-         
+                    <p1>Bầu không khí xã hội bao quanh Hăm-lét: Mọi người
+                        người
+                        xung quanh chàng đều cố gắng dò xét xem chàng có
+                        thật
+                        điên khùng hay chỉ giả điên.</p1>
+
+
+                    <p style="margin-top: 40px; font-size: 130%;">1. Lời
+                        thoại của các nhân vật
+                        trước khi Hăm-lét xuất hiện cho thấy điều gì về bầu
+                        không khí xã hội bao quanh chàng?
+
+                        Bầu không khí xã hội bao quanh Hăm-lét: Mọi người
+                        người
+                        xung quanh chàng đều cố gắng dò xét xem chàng có
+                        thật
+                        điên khùng hay chỉ giả điên.</p>
+                    <p1>Bầu không khí xã hội bao quanh Hăm-lét: Mọi người
+                        người
+                        xung quanh chàng đều cố gắng dò xét xem chàng có
+                        thật
+                        điên khùng hay chỉ giả điên.</p1>
+
+
+                    <p style="margin-top: 40px; font-size: 130%;">1. Lời
+                        thoại của các nhân vật
+                        trước khi Hăm-lét xuất hiện cho thấy điều gì về bầu
+                        không khí xã hội bao quanh chàng?
+
+                        Bầu không khí xã hội bao quanh Hăm-lét: Mọi người
+                        người
+                        xung quanh chàng đều cố gắng dò xét xem chàng có
+                        thật
+                        điên khùng hay chỉ giả điên.</p>
+                    <p1>Bầu không khí xã hội bao quanh Hăm-lét: Mọi người
+                        người
+                        xung quanh chàng đều cố gắng dò xét xem chàng có
+                        thật
+                        điên khùng hay chỉ giả điên.</p1>
                 </div>
-                <img style="margin-left: 20%;width: 800px;margin-top: 20px;" id="product-img2" >
-                <div id="product-ndc2"></div>
-                <img style="margin-left:20%;width: 800px;margin-top: 20px;" id="product-img3">
-                <div id="product-ndc3"></div>
+                <img style="margin-left: 40%;width: 100px;" id="product-img2" >
+                <img style="margin-left:40%;" id="product-img3">
 
             </div>
 
@@ -254,7 +290,7 @@
 
             <script src="js/main.js"></script>
             <script src="./6.js" type="module"></script>
-            <script src="./detail.js"></script>
+            <script src="./detail2.js"></script>
         </body>
 
     </html>
