--- a/web/login.html
+++ b/web/login.html
@@ -25,23 +25,23 @@
 <body>
         <header class="header">
             <nav class="nav">
-                <a href="#"> Home </a>
-                <a href="#"> About </a>
-                <a href="#"> Service </a>
-                <a href="#"> Contact </a>
+                <a > Home </a>
+                <a > About </a>
+                <a > Service </a>
+                <a> Contact </a>
             </nav>
             <div class="search">
-                <i class="fa-solid fa-magnifying-glass"></i>
+        
                 <i class="fa-solid fa-user"></i>  
             </div>
         </header>
         <div class="background"></div>
         <section class="home">
             <div class="content">
-                <a href="#" class="logo"> <i class="fa-solid fa-paper-plane"></i>new</a>
-                <h2> Welcome!</h2>
-                <h3> new web</h3>
-               <pre>new web is good </pre>
+                <a href="#" class="logo"> <i class=""></i>Van</a>
+                <h2>Chào mừng  </h2>
+                <h3> Tới với trang web của chúng tôi</h3>
+               <pre>Mọi kiến thức bạn cần đều ở đây</pre>
                <div class="icon">
                 <i class="fa-brands fa-instagram"></i>
                 <i class="fa-brands fa-facebook"></i>
@@ -117,6 +117,7 @@
 
     <script src="./firebase/login.js" type="module"></script>
     <script src="./firebase/logout.js" type="module"></script>
+ 
 </body>
 </html>
 
