--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,7 @@
     <!-- Template Stylesheet -->
     <link href="./style.css" rel="stylesheet">
 
+
 </head>
 
 <div>
@@ -67,10 +68,10 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
-                        <a href="blog.html" class="dropdown-item">Blog Grid</a>
+                        <a href="baidang.html" class="dropdown-item">Bài Đăng</a>
                         <a href="detail.html" class="dropdown-item">Blog Detail</a>
                         <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="quote.html" class="dropdown-item">Quote Form</a>
+          
                         <a href="team.html" class="dropdown-item">The Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>        
                     </div>
@@ -217,6 +218,8 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="./6.js" type="module"></script>
+   
 </body>
 
 </html>
