--- a/web/login.html
+++ b/web/login.html
@@ -38,7 +38,10 @@
         <div class="background"></div>
         <section class="home">
             <div class="content">
-                <a href="#" class="logo"> <i class=""></i>Van</a>
+                <a href="index.html" class="navbar-brand p-0">
+                    <h1 class="m-0 text-uppercase text-primary" style="font-size: 30px;color: red;">THƯ VIỆN NGỮ VĂN </h1>
+                    <h2 style="font-size: 11px; color: black;">THPT TRẦN HƯNG ĐẠO -HÀ ĐÔNG</h2>
+                </a>
                 <h2>Chào mừng  </h2>
                 <h3> Tới với trang web của chúng tôi</h3>
                <pre>Mọi kiến thức bạn cần đều ở đây</pre>
