--- a/web/register.html
+++ b/web/register.html
@@ -19,7 +19,10 @@
         <div class="login-container">
 
             <div class="login-header">
-                <a href>van</a>
+                <a href="index.html" class="navbar-brand p-0">
+                    <h1 class="m-0 text-uppercase text-primary" style="font-size: 30px;color: red;">THƯ VIỆN NGỮ VĂN </h1>
+                    <h2 style="font-size: 15px;color: black;">THPT TRẦN HƯNG ĐẠO -HÀ ĐÔNG</h2>
+                </a>
             </div>
 
             <div class="login-body">
