--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,8 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>van</h1>
+            <h1 class="m-0 text-uppercase text-primary" style="font-size: 30px;">THƯ VIỆN NGỮ VĂN </h1>
+            <h2 style="font-size: 15px;">THPT TRẦN HƯNG ĐẠO -HÀ ĐÔNG</h2>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
